--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://harika0293.github.io/ReactJS-Firebase-Chat-App",
+  "homepage": "https://harika0293.github.io/chat",
   "name": "react-firebase-chat",
   "version": "0.1.0",
   "private": true,
